# jam

./: .env  .env.development  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CHANGELOG-rescan-progress.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  MANIFEST.in  README.md  RELEASING.md  eslint.config.js  fix_navbar.js  fix_navbar_component.js  fix_navbar_usage.js  fix_service_info_context.js  index.html  index.md  package-lock.json  package.json  setup.cfg  tsconfig.app.json  tsconfig.json  typings.d.ts  update_main_wallet_view.js  update_navbar.js  update_service_info.js  update_wallets.js  vite.config.ts  vitest.unit.config.ts  vitest.workspace.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml
.husky/: pre-commit
.storybook/: main.ts  preview.ts  preview.tsx  vitest.setup.ts
.tx/: config  transifex.yml
docker/regtest/: .env.example  .gitignore  common.sh  docker-compose-common.yml  docker-compose.yml  fund-wallet.sh  generate-onion-address.sh  init-setup.sh  (+4 more)
docs/: developing.md
joinmarket/: package-lock.json  package.json
joinmarketwebui/: controller.py  service.py
public/: bootstrap.css  index.html  site.webmanifest
scripts/: changelog.mjs  postchangelog.js  release.js
src/: App.tsx  format.test.tsx  format.tsx  globals.d.ts  i18n.js  index.css  index.jsx  index.tsx  main.tsx  reportWebVitals.ts  session.js  session.ts  setupProxy.js  setupTests.js  setupTests.ts  testUtils.jsx  testUtils.tsx  utils.js  utils.test.ts  utils.ts
tests/: conftest.py  ghost_machine.py
(+474 files in other folders)
