[metadata]
name = joinmarket-webui_joinmarketwebui
version = 0.0.1
author = Kim Neunert
author_email = k9ert@gmx.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joinmarket-webui/specterext-joinmarketwebui/issues
project_urls =
    Bug Tracker = https://github.com/joinmarket-webui/specterext-joinmarketwebui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: specter :: Extension

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src